# poopcode

./: .gitignore
L2/: Makefile  fruit.hpp  l2  main.cpp  vector3.cpp  vector3.hpp
L2-D/: CMakeLists.txt  a.out  main  main.cpp  polecenia.md
L3-D/: CMakeLists.txt  Makefile  Playlist.hpp  Song.hpp  SongDuration.hpp  main.cpp
L5/: Makefile  Sensor.hpp  l5  main.cpp
L5-D/: Movie.hpp
L6-D/: Character.hpp  l6  main.cpp
W1/: 0403.cpp  04031.cpp  a.out  basics  basics.cpp
W1/makefile-tutorial/: blah  blah.c
W2/: w2
W45/: Makefile  Movie.hpp  MovieCollection.hpp  main.cpp  wyklad.cpp  zadanie
